# DistroHub

./: .gitignore  ACCOUNTABILITY_DEPLOYMENT_CHECKLIST.md  ACCOUNTABILITY_UX_IMPROVEMENTS.md  ALLOW_PASTING_STEPS.md  API_URL_GUIDE.md  AUDIT_REPORT.md  AUTOMATED_DEPLOYMENT.md  AUTO_CREATE_ICONS.md  BACKEND_DEPLOYMENT.md  BACKEND_DEPLOY_STEPS.md  BACKFILL_CHECKLIST.md  BACKFILL_IMPLEMENTATION_COMPLETE.md  BACKFILL_PAYMENT_ROUTE_ID_VERIFICATION.sql  BACKFILL_PRODUCTION_EXECUTION.md  BACKFILL_RUNBOOK.md  BROWSER_CHECK_AFTER_IMPROVEMENTS.md  BROWSER_CHECK_GUIDE.md  BROWSER_CHECK_RESULT.md  BROWSER_TEST_FINAL_RESULTS.md  BROWSER_TEST_RESULTS.md  BROWSER_TEST_SUMMARY.md  BROWSER_TEST_SUPPLIER_FIX.md  BROWSER_VERIFICATION_STEPS.md  CAPTURE_LOGIN_REQUEST.md  CATEGORY_500_ERROR_FIX.md  CATEGORY_500_FIX_SUMMARY.md  CATEGORY_DEBUG_FINAL.md  CATEGORY_DROPDOWN_FIX.md  CATEGORY_FIX_EXPLANATION.md  CATEGORY_FIX_FINAL_SUMMARY.md  CATEGORY_FIX_SUMMARY.md  CATEGORY_HARDENING_SUMMARY.md  CATEGORY_NETWORK_ERROR_FIX.md  CHALLAN_DEPLOYMENT_NEEDED.md  CHALLAN_UI_MIGRATION_CHECK.md  CHECK_CATEGORY_ERROR.md  CHECK_REMAINING_PAYMENTS.sql  CODEBASE_AUDIT_REPORT.md  CODE_VERIFICATION_REPORT.md  COLD_START_FIXED.md  (+201 more)
distrohub-backend/: .env.production  .vercelignore  DEPLOYMENT_CHECKLIST.md  DEPLOY_RAILWAY.md  MIGRATION_GUIDE.md  README_SMS.md  SALES_RETURN_ANALYSIS.md  SALES_RETURN_FINAL_OUTPUT.md  SALES_RETURN_IMPLEMENTATION.md  SALES_RETURN_SUMMARY.md  SALES_RETURN_TESTING_GUIDE.md  SALES_RETURN_VERIFICATION.md  SUPABASE_MIGRATION_COPY_PASTE.sql  check_admin.py  check_sales_rep_module.py  deploy.ps1  (+12 more)
(+141 files in other folders)
